# tg_bot_ai_hero

./: .dockerignore  .gitignore  Cargo.toml  build.rs  docker-compose.yml  example.config.toml  example.env  postgresql_diesel.toml  readme.md  sqlite_diesel.toml
build_database/: Cargo.toml
build_database/src/: certs.rs  keygen.rs  lib.rs
build_database/src/build_database/: factory.rs  mod.rs  postgres.rs  sqlite.rs  stores.rs
build_database/src/build_database/state/: mod.rs
build_database/src/build_database/state/merkle/: lmdb.rs  mod.rs
build_database/src/error/: constraint_violation.rs  internal.rs  invalid_argument.rs  invalid_state.rs  mod.rs  unavailable.rs
build_database/src/migrations/: mod.rs
build_database/src/migrations/diesel/postgres/: mod.rs
build_database/src/migrations/diesel/postgres/migrations/2_biome_create_profiles/: up.sql
build_database/src/migrations/diesel/sqlite/: mod.rs
build_database/src/migrations/diesel/sqlite/migrations/1_channel_messages/: down.sql  up.sql
build_database/src/migrations/diesel/sqlite/migrations/2_biome_create_profiles/: down.sql
build_database/src/migrations/diesel/sqlite/migrations/3_stats/: up.sql
build_database/src/migrations/diesel/sqlite/migrations/4_preferences/: down.sql  up.sql
build_database/src/migrations/diesel/sqlite/migrations/5_admin/: up.sql
database/: 01_channel_messages.sql
docker/: bot.dockerfile  postgresql.dockerfile
migrations/1_channel_messages/: up.sql
protos/: admin.proto  authorization.proto  circuit.proto  component.proto  consensus.proto  network.proto  service.proto  two_phase.proto
scripts/: assemble_run_psql.sh
src/: app.rs  database.rs  dispatcher.rs  env_config.rs  lib.rs  main.rs  schema.rs  subcommands.rs
src/db_objects/: channel_messages_model.rs  mod.rs
src/handlers/: mod.rs  parser.rs
src/handlers/bot/: bot_service.rs
src/handlers/client/: message_handler.rs
src/modules/: config.rs  mod.rs  openai.rs
src/modules/admin/: member_mgr.rs  mod.rs
src/modules/admin/store/: error.rs  memory.rs  mod.rs
src/modules/admin/store/diesel/: mod.rs  models.rs
src/modules/admin/store/diesel/operations/: add_member.rs  delete_member.rs  get_member.rs  mod.rs
src/modules/biome/: callback.rs  mod.rs
src/modules/biome/profile/: mod.rs
src/modules/biome/profile/store/: error.rs  memory.rs  mod.rs
src/modules/biome/profile/store/diesel/: mod.rs  models.rs
src/modules/biome/profile/store/diesel/operations/: add_profile.rs  get_profile.rs  list_profiles.rs  mod.rs  remove_profile.rs  update_profile.rs
src/modules/chat/: markdown.rs  mod.rs  session.rs  session_mgr.rs
src/modules/error/: constraint_violation.rs  internal.rs  invalid_argument.rs  invalid_state.rs  mod.rs  service_error.rs  unavailable.rs
src/modules/parser/: mod.rs  parser_mgr.rs
src/modules/parser/client/: message_handler.rs
src/modules/parser/store/: error.rs  memory.rs  mod.rs
src/modules/parser/store/diesel/: mod.rs  models.rs
src/modules/parser/store/diesel/operations/: add_channel_message.rs  delete_channel_message.rs  get_channel_message.rs  mod.rs
src/modules/prefs/: mod.rs  prefs_mgr.rs
src/modules/prefs/store/: error.rs  memory.rs  mod.rs
src/modules/prefs/store/diesel/: mod.rs  models.rs
src/modules/prefs/store/diesel/operations/: get_value.rs  mod.rs  set_value.rs
src/modules/stats/: mod.rs  stats_mgr.rs
src/modules/stats/store/: error.rs  memory.rs  mod.rs
src/modules/stats/store/diesel/: mod.rs  models.rs
src/modules/stats/store/diesel/operations/: add_token_usage.rs  get_token_usage.rs  mod.rs
src/store/: memory.rs  mod.rs  pool.rs  postgres.rs  sqlite.rs
src/subcommands/: error.rs  permissions.rs  time.rs
src/utils/: app_error.rs  database_service.rs  mod.rs  sign_in_tg.rs  types_and_constants.rs
