[package]
name = "ai_hero"
version = "0.1.0"
edition = "2021"
default-run = "ai_hero"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "chrono"] }
teloxide = { version = "0.12.2", features = ["macros", "throttle"] }
base64 = "0.21.4"
dotenv = "0.15.0"
flexi_logger = "0.27.0"
grammers-client = "0.5.0"
grammers-session = "0.5.1"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = "1.0.188"
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
mime = "0.3.17"
anyhow = "1.0.75"
signal-hook = "0.3.17"
secrecy = { version = "0.8.0", features = ["serde"] }
toml = "0.5.9"
async-trait = "0.1"
pulldown-cmark = "0.9"
futures = "0.3"
pin-project-lite = "0.2"
paste = "1.0"
rusqlite = "0.28"
async-openai = "0.17.1"


[[bin]]
name = "ai_hero"
path = "src/main.rs"
