[package]
name = "ai_hero"
version = "0.1.0"
edition = "2021"
default-run = "ai_hero"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.11"
diesel = { version = "2.1.0", features = [
    # "postgres",
    "sqlite",
    "r2d2",
    "chrono",
    "serde_json",
], optional = true }
teloxide = { version = "0.12.2", features = ["macros", "throttle"] }
base64 = "0.22.1"
dotenv = "0.15.0"
flexi_logger = "0.28.5"
grammers-client = "0.6.0"
grammers-session = "0.5.1"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = "1.0.188"
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
mime = "0.3.17"
anyhow = "1.0.75"
signal-hook = "0.3.17"
secrecy = { version = "0.8.0", features = ["serde"] }
toml = "0.8.15"
async-trait = "0.1"
pulldown-cmark = "0.11.0"
futures = "0.3"
pin-project-lite = "0.2"
paste = "1.0"
# rusqlite = "0.28"
async-openai = "0.23.4"
diesel_migrations = { version = "2.1.0", optional = true }
# transact = { version = "0.4.6", features = ["state-merkle-sql"] }
openssl = "0.10"
cylinder = { version = "0.3.1", features = ["jwt", "key-load"] }
dirs = "5.0.1"
whoami = "1.5.1"
users = "0.11"
libc = "0.2"
build_database = { path = "./build_database" }
async-std = "1.12.0"

pdf-extract = "0.7.7"
zip = "2.2.0"
quick-xml = "0.36.1"

[build-dependencies]
build_database = { path = "./build_database" }
diesel = { version = "2.1.3", features = [
    # "postgres",
    "sqlite",
    "r2d2",
    "chrono",
    "serde_json",
], optional = true }
diesel_migrations = { version = "2.1.0", optional = true }
dotenvy = "0.15"


[features]
biome = []
biome-profile = ["biome", "store"]
database = ["diesel"]
upgrade = ["database"]
default = [
    "store-factory",
    "store",
    "memory",
    "sqlite",
    "biome-profile",
    "database",
]
memory = ["sqlite"]

# stable = ["default", "store-factory", "store"]    

store = []
store-factory = ["store"]
sqlite = ["diesel/sqlite", "diesel_migrations"]


[[bin]]
name = "ai_hero"
path = "src/main.rs"
