[package]
name = "build_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.3", features = [
    # "postgres",
    "sqlite",
    "r2d2",
    "chrono",
    "serde_json",
], optional = true }
diesel_migrations = { version = "2.1.0", optional = true }
dotenvy = "0.15"
anyhow = "1.0.75"
# transact = { version = "0.4.6", features = ["state-merkle-sql"] }
openssl = "0.10"
cylinder = { version = "0.2.2", features = ["jwt", "key-load"] }
dirs = "4"
whoami = "0.7.0"
users = "0.11"
libc = "0.2"

[features]
database = ["diesel", "diesel_migrations"]
sqlite = ["diesel/sqlite"]
default = ["sqlite", "database"]
